[package]
name = "py_ntru"
version = "1.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
aes-gcm = "0.9"
ntrust-native = { version = "1.0", features = ["ntruhrss701"] }
pyo3 = { version = "0.15", features = ["extension-module"] }

[lib]
crate-type = ["cdylib"]  # Required for creating a Python extension module